prepare, add requirements

--- a/settings.ini
+++ b/settings.ini
@@ -29,7 +29,7 @@ title = %(lib_name)s
 ### PyPI ###
 audience = Developers
 author = Mike Bishop
-author_email = mike@drinklist.co
+author_email = mikebishop@tuta.io
 copyright = 2024 onwards, %(author)s
 description = Annotate images, video and audio from python notebooks
 keywords = nbdev jupyter notebook python
@@ -38,7 +38,7 @@ status = 3
 user = MJBishop
 
 ### Optional ###
-# requirements = fastcore pandas
+requirements = dash pandas
 # dev_requirements = 
 # console_scripts =
 # conda_user = 
